syntax = "proto3";

package io.inscopemetrics.kairosdb.proto.v2;

// DataPoint message for histogram V2 format compatibility
// Based on https://github.com/InscopeMetrics/kairosdb-format/blob/master/src/main/proto/format.v2.proto
message DataPoint {
  repeated uint64 bucket_key = 1;
  repeated uint64 bucket_count = 2;
  double min = 3;
  double max = 4;
  double sum = 5;
  double mean = 6;
  uint32 precision = 7;
}